--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,11 @@
     "authors": [
         {
             "name": "Michal Štván",
-            "email": "michal@stvan.sk"
         }
     ],
     "require": {
-        "php": "^8.1",
-        "laravel/framework": "^10.0|^11.0"
+        "php": ">=8.1",
+        "laravel/framework": ">=10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
