Fix formatting in composer.json

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "authors": [
         {
-            "name": "Michal Štván",
+            "name": "Michal Štván"
         }
     ],
     "require": {
